# beeteam

./: .env.example  .gitignore  docker-compose.yml
api/: Cargo.toml
api/crates/bt-api/: Cargo.toml
api/crates/bt-api/src/: app.rs  error.rs  main.rs  openapi.rs  storage.rs
api/crates/bt-api/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  permissions.rs
api/crates/bt-api/src/routes/: approvals.rs  auth.rs  evidence.rs  files.rs  goals.rs  grades.rs  health.rs  meetings.rs  members.rs  mod.rs  reviews.rs  teams.rs  templates.rs
api/crates/bt-db/: Cargo.toml
api/crates/bt-db/migrations/: 0001_init.sql  0002_member_joined_date.sql  0003_profile.sql  0004_grades.sql  0005_member_grades.sql  0006_grade_evidence.sql  0007_performance_reviews.sql  0008_review_approval.sql
api/crates/bt-db/src/: lib.rs  seed.rs
api/crates/bt-domain/: Cargo.toml
api/crates/bt-domain/src/: lib.rs
api/scripts/: test.sh
design_handoff_beeteam/: BeeTeam.html  README.md  app.jsx  components.jsx  data.js  flows.jsx  forms.jsx  grade-profile.jsx  grades-data.js  grades.jsx  meeting.jsx  review.jsx  screens.jsx  styles.css
web/: middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: Avatar.tsx  CompetencyBar.tsx  DevItemRow.tsx  Feed.tsx  FieldControl.tsx  FileDropzone.tsx  FileGlyph.tsx  FileRow.tsx  FileTile.tsx  FilterPopover.tsx  Logo.tsx  MeetingDetailCard.tsx  MeetingDrawer.tsx  MeetingDrawerHost.tsx  Modal.tsx  MonthCalendar.tsx  MoodPicker.tsx  MoodTrendBars.tsx  NavItem.tsx  NoAccess.tsx  NoteBlock.tsx  OkrCard.tsx  Pill.tsx  ProfileActions.tsx  ProfileHeader.tsx  (+5 more)
(+142 files in other folders)
