[workspace]
resolver = "2"
members = ["crates/bt-domain", "crates/bt-db", "crates/bt-api"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"
] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
