[package]
name = "bt-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bt-domain = { path = "../bt-domain" }
bt-db = { path = "../bt-db" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
utoipa = { workspace = true }
anyhow = "1"
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
aws-sdk-s3 = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
